# pkgfile-online

./: .gitignore  README.md  build.sh  index.html  package.json
backend/: Cargo.toml  README.md
backend/src/: cli.rs  lib.rs  main.rs
backend/src/server/: api.rs  mod.rs  search.rs  utils.rs
src/: App.vue  main.ts
src/assets/: base.css
src/stores/: ping.ts  search.ts
src/utils/: index.ts
