[package]
name = "backend"
version = "0.1.1"
edition = "2021"
authors = ["sakunia <sakunia@foxmail.com>"]
description = "pkgfile searching api server"
readme = "README.md"
license = "GPL-3.0"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.13", features = ["derive"] }
poem = { version = "1.3.55", features = ["anyhow"] }
serde = { version = "1.0.158", features = ["derive"] }
tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[profile.release]
lto = true
strip = true
